Academic awards: left-align dates; fixed column keeps body text aligned
Made-with: Cursor

--- a/css/style.css
+++ b/css/style.css
@@ -577,9 +577,6 @@ a:hover {
   font-weight: 650;
   color: var(--text);
   white-space: nowrap;
-  text-align: right;
-  justify-self: stretch;
-  padding-right: 0.15rem;
 }
 .academic-awards-list .academic-award-body {
   margin: 0;
@@ -592,9 +589,6 @@ a:hover {
   }
   .academic-awards-list .academic-award-years {
     white-space: normal;
-    text-align: left;
-    justify-self: start;
-    padding-right: 0;
   }
 }
 
